Fix appearance on Firefox.
Fix link to CUPS.org.


git-svn-id: svn+ssh://src.apple.com/svn/cups/cups.org/trunk@11470 a1ca3aef-8c08-0410-bb20-df032aa958be

--- a/doc/cups.css
+++ b/doc/cups.css
@@ -13,6 +13,7 @@
 }
 .header ul {
   list-style: none;
+  margin: 0px;
   -webkit-margin-before: 0;
   -webkit-margin-after: 0;
   -webkit-margin-start: 0;
